--- a/flask/vercel.json
+++ b/flask/vercel.json
@@ -1,10 +1,14 @@
 {
-    "functions": {
-      "api": { "runtime": "vercel-python@0.4.0" }
-    },
-    "routes": [
-      { "src": "/(.*)", "dest": "/flask/app.py" }
-    ]
-  }
-  
-  
+  "builds": [
+    {
+      "src": "api/app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/app.py"
+    }
+  ]
+}
