--- a/quantum/_config.yml
+++ b/quantum/_config.yml
@@ -24,14 +24,14 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "quantum" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
-remote_theme: zendesk/jekyll-theme-zendesk-garden@main
+# remote_theme: zendesk/jekyll-theme-zendesk-garden@main
 # Build settings
-theme: minima
+theme: jekyll-theme-lanyon
 plugins:
   - jekyll-feed
 
